# app/Http/Controllers/Utilities/CategoryController.php
@@ -8,9 +8,45 @@ use Illuminate\Http\Request;
 
 class CategoryController extends Controller
 {
+
+    
     /**
-     * Display the specified resource.
-     */
+    * @OA\Get(
+    *   path="/v1/list/categories",
+    *   summary="Get all categories with their children",
+    *   tags={"Categories"},
+    *   @OA\Response(
+    *     response=200,
+    *     description="Categories retrieved successfully",
+    *     @OA\JsonContent(
+    *       @OA\Property(property="success", type="boolean"),
+    *       @OA\Property(property="message", type="array",
+    *         @OA\Items(
+    *           @OA\Property(property="id", type="integer"),
+    *           @OA\Property(property="name", type="string"),
+    *           @OA\Property(property="parent_id", type="integer", nullable=true),
+    *           @OA\Property(property="children", type="array",
+    *             @OA\Items(
+    *               @OA\Property(property="id", type="integer"),
+    *               @OA\Property(property="name", type="string"),
+    *               @OA\Property(property="parent_id", type="integer"),
+    *             ),
+    *           ),
+    *         ),
+    *       ),
+    *     ),
+    *   ),
+    *   @OA\Response(
+    *     response=400,
+    *     description="Invalid input",
+    *     @OA\JsonContent(
+    *       @OA\Property(property="success", type="boolean"),
+     *       @OA\Property(property="message", type="string")
+    *     )
+    *   )
+    * )
+    */
+
     public function show(Category $category)
     {
         $categories = Category::whereNull('parent_id')->with('children')->get();
